# llmcode-server

./: .gitignore  Cargo.toml  README.md  dl.sh  docker-compose.yml
docker/: Dockerfile
src/: api.rs  llm.rs  main.rs
